--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,3 @@
-PORT=31577
 S3_ENDPOINT=http://localhost:9000
 S3_BUCKET=app
 S3_ACCESS_KEY=minio
@@ -8,3 +7,5 @@ DATABASE_URL=postgresql://root:root@localhost:5432/app
 TEST_DATABASE_URL=postgresql://root:root@localhost:5432/test
 MINIO_ROOT_USER=minio
 MINIO_ROOT_PASSWORD=password
+OPENAI_API_KEY=apikey
+OPENAI_BASE_URL=endPoint
