--- a/server/package.json
+++ b/server/package.json
@@ -35,8 +35,8 @@
     "@fastify/cookie": "^9.3.1",
     "@fastify/etag": "^5.2.0",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/http-proxy": "^9.5.0",
     "@fastify/jwt": "^8.0.1",
-    "@fastify/static": "^7.0.4",
     "@prisma/client": "^5.13.0",
     "aspida": "^1.14.0",
     "dotenv": "^16.4.5",
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@aspida/axios": "^1.14.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.609.0",
     "@types/busboy": "^1.5.4",
     "@types/node": "^20.12.10",
     "axios": "^1.6.8",
