青空文庫からhtml, title, authorを持ってこれるようにした

--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
+    "iconv-lite": "^0.6.3",
     "openai": "^4.52.1"
   }
 }
