--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "migrate:dev": "prisma migrate dev && npx prisma db seed",
     "migrate:dev:createonly": "prisma migrate dev --create-only",
     "migrate:deploy": "prisma migrate deploy && npx prisma db seed",
+    "batch": "node -r esbuild-register tests/batch.ts",
     "migrate:reset": "prisma migrate reset",
     "start": "node --enable-source-maps index.js",
     "test": "vitest run --coverage",
@@ -56,6 +57,7 @@
     "esbuild-node-externals": "^1.13.0",
     "esbuild-register": "^3.5.0",
     "frourio": "^1.0.1",
+    "msw": "^2.3.1",
     "node-dev": "^8.0.0",
     "notios": "^0.4.1",
     "prisma": "^5.13.0",
