--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-use-websocket": "^4.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
