--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv": "^16.4.5",
     "iconv-lite": "^0.6.3",
     "openai": "^4.52.1",
+    "react-use-websocket": "^4.8.1",
     "websocket": "^1.0.35"
   }
 }
